builds/tests/326/data/attachments/c683d83b0caceec1.txt
2026-06-12 07:57:34,103 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-12 07:57:34,103 INFO     yoyo.migrations —  - applying step 0
2026-06-12 07:57:34,103 INFO     yoyo.migrations —  - applying step 1
2026-06-12 07:57:34,103 INFO     yoyo.migrations —  - applying step 2
2026-06-12 07:57:34,104 INFO     yoyo.migrations —  - applying step 3
2026-06-12 07:57:34,104 INFO     yoyo.migrations —  - applying step 4
2026-06-12 07:57:34,104 INFO     yoyo.migrations —  - applying step 5
2026-06-12 07:57:34,104 INFO     yoyo.migrations —  - applying step 6
2026-06-12 07:57:34,105 INFO     yoyo.migrations —  - applying step 7
2026-06-12 07:57:34,105 INFO     yoyo.migrations —  - applying step 8
2026-06-12 07:57:34,105 INFO     yoyo.migrations —  - applying step 9
2026-06-12 07:57:34,105 INFO     yoyo.migrations —  - applying step 10
2026-06-12 07:57:34,105 INFO     yoyo.migrations —  - applying step 11
2026-06-12 07:57:34,106 INFO     yoyo.migrations —  - applying step 12
2026-06-12 07:57:34,106 INFO     yoyo.migrations —  - applying step 13
2026-06-12 07:57:34,106 INFO     yoyo.migrations —  - applying step 14
2026-06-12 07:57:34,108 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-12 07:57:34,109 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-12 07:57:34,110 INFO     yoyo.migrations —  - applying step 0
2026-06-12 07:57:34,110 INFO     yoyo.migrations —  - applying step 1
2026-06-12 07:57:34,113 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-12 07:57:34,113 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-12 07:57:34,114 INFO     yoyo.migrations —  - applying step 0
2026-06-12 07:57:34,115 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-12 07:57:34,116 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-12 07:57:34,116 INFO     yoyo.migrations —  - applying step 0
2026-06-12 07:57:34,117 INFO     yoyo.migrations —  - applying step 1
2026-06-12 07:57:34,117 INFO     yoyo.migrations —  - applying step 2
2026-06-12 07:57:34,117 INFO     yoyo.migrations —  - applying step 3
2026-06-12 07:57:34,117 INFO     yoyo.migrations —  - applying step 4
2026-06-12 07:57:34,117 INFO     yoyo.migrations —  - applying step 5
2026-06-12 07:57:34,118 INFO     yoyo.migrations —  - applying step 6
2026-06-12 07:57:34,118 INFO     yoyo.migrations —  - applying step 7
2026-06-12 07:57:34,118 INFO     yoyo.migrations —  - applying step 8
2026-06-12 07:57:34,119 INFO     yoyo.migrations —  - applying step 9
2026-06-12 07:57:34,119 INFO     yoyo.migrations —  - applying step 10
2026-06-12 07:57:34,119 INFO     yoyo.migrations —  - applying step 11
2026-06-12 07:57:34,119 INFO     yoyo.migrations —  - applying step 12
2026-06-12 07:57:34,120 INFO     yoyo.migrations —  - applying step 13
2026-06-12 07:57:34,120 INFO     yoyo.migrations —  - applying step 14
2026-06-12 07:57:34,120 INFO     yoyo.migrations —  - applying step 15
2026-06-12 07:57:34,121 INFO     yoyo.migrations —  - applying step 16
2026-06-12 07:57:34,121 INFO     yoyo.migrations —  - applying step 17
2026-06-12 07:57:34,122 INFO     yoyo.migrations —  - applying step 18
2026-06-12 07:57:34,122 INFO     yoyo.migrations —  - applying step 19
2026-06-12 07:57:34,122 INFO     yoyo.migrations —  - applying step 20
2026-06-12 07:57:34,122 INFO     yoyo.migrations —  - applying step 21
2026-06-12 07:57:34,122 INFO     yoyo.migrations —  - applying step 22
2026-06-12 07:57:34,124 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-12 07:57:34,125 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-12 07:57:34,126 INFO     yoyo.migrations —  - applying step 0
2026-06-12 07:57:34,126 INFO     yoyo.migrations —  - applying step 1
2026-06-12 07:57:34,126 INFO     yoyo.migrations —  - applying step 2
2026-06-12 07:57:34,126 INFO     yoyo.migrations —  - applying step 3
2026-06-12 07:57:34,127 INFO     yoyo.migrations —  - applying step 4
2026-06-12 07:57:34,128 INFO     yoyo.migrations —  - applying step 5
2026-06-12 07:57:34,128 INFO     yoyo.migrations —  - applying step 6
2026-06-12 07:57:34,128 INFO     yoyo.migrations —  - applying step 7
2026-06-12 07:57:34,128 INFO     yoyo.migrations —  - applying step 8
2026-06-12 07:57:34,128 INFO     yoyo.migrations —  - applying step 9
2026-06-12 07:57:34,129 INFO     yoyo.migrations —  - applying step 10
2026-06-12 07:57:34,129 INFO     yoyo.migrations —  - applying step 11
2026-06-12 07:57:34,129 INFO     yoyo.migrations —  - applying step 12
2026-06-12 07:57:34,129 INFO     yoyo.migrations —  - applying step 13
2026-06-12 07:57:34,129 INFO     yoyo.migrations —  - applying step 14
2026-06-12 07:57:34,129 INFO     yoyo.migrations —  - applying step 15
2026-06-12 07:57:34,130 INFO     yoyo.migrations —  - applying step 16
2026-06-12 07:57:34,130 INFO     yoyo.migrations —  - applying step 17
2026-06-12 07:57:34,130 INFO     yoyo.migrations —  - applying step 18
2026-06-12 07:57:34,130 INFO     yoyo.migrations —  - applying step 19
2026-06-12 07:57:34,130 INFO     yoyo.migrations —  - applying step 20
2026-06-12 07:57:34,130 INFO     yoyo.migrations —  - applying step 21
2026-06-12 07:57:34,131 INFO     yoyo.migrations —  - applying step 22
2026-06-12 07:57:34,131 INFO     yoyo.migrations —  - applying step 23
2026-06-12 07:57:34,131 INFO     yoyo.migrations —  - applying step 24
2026-06-12 07:57:34,131 INFO     yoyo.migrations —  - applying step 25
2026-06-12 07:57:34,131 INFO     yoyo.migrations —  - applying step 26
2026-06-12 07:57:34,132 INFO     yoyo.migrations —  - applying step 27
2026-06-12 07:57:34,132 INFO     yoyo.migrations —  - applying step 28
2026-06-12 07:57:34,132 INFO     yoyo.migrations —  - applying step 29
2026-06-12 07:57:34,132 INFO     yoyo.migrations —  - applying step 30
2026-06-12 07:57:34,132 INFO     yoyo.migrations —  - applying step 31
2026-06-12 07:57:34,133 INFO     yoyo.migrations —  - applying step 32
2026-06-12 07:57:34,133 INFO     yoyo.migrations —  - applying step 33
2026-06-12 07:57:34,134 INFO     yoyo.migrations —  - applying step 34
2026-06-12 07:57:34,135 INFO     yoyo.migrations —  - applying step 35
2026-06-12 07:57:34,136 INFO     yoyo.migrations —  - applying step 36
2026-06-12 07:57:34,136 INFO     yoyo.migrations —  - applying step 37
2026-06-12 07:57:34,136 INFO     yoyo.migrations —  - applying step 38
2026-06-12 07:57:34,138 INFO     yoyo.migrations —  - applying step 39
2026-06-12 07:57:34,139 INFO     yoyo.migrations —  - applying step 40
2026-06-12 07:57:34,141 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-12 07:57:34,145 INFO     yoyo.migrations — Applying 0006_category_templates
2026-06-12 07:57:34,146 INFO     yoyo.migrations —  - applying step 0
2026-06-12 07:57:34,150 INFO     yoyo.migrations — Marking 0006_category_templates applied
2026-06-12 07:57:34,157 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-12 07:57:34,159 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 246, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 540, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
